# Retinoblastoma_Detector

./: README.md  app.py  evaluation.ipynb  pyproject.toml  requirements.txt  requirements.txt.bak  train.py
models/: detector.py  eye_detector.py  losses.json
utils/: dataset.py  evaluation.py
